# reward_algorithm

./: .gitignore  .gitmodules  README.md
extra_math/: extra_math.hpp
neural_network_tools/: .gitignore  CMakeLists.txt  activation.hpp  all.hpp  default_configuration.hpp  error_model.hpp  forward_declarations.hpp  layer_filter.hpp  network.hpp  neuron.hpp  utilities.hpp
neural_network_tools/test/: basic.cpp
scripts/: BUILDING.md  CMakeLists.txt  README.md
scripts/cmake/: auto_project_name.cmake  auto_tests.cmake  colours.cmake  generate_documentation.cmake  included_list.cmake  statistics.cmake
scripts/doxygen/: Doxyfile.in
test/: enecuum.cpp
